<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background_screen"
    tools:context=".question1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="question: 1"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/cap_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:background="#E91E63"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/question_1"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/question1_option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="#BFC6F1"
        android:padding="5dp"
        android:text="@string/question1_option1"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/question1_option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="#BFC6F1"
        android:padding="5dp"
        android:text="@string/question1_option2"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/question1_option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="#BFC6F1"
        android:padding="5dp"
        android:text="@string/question1_option3"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/question1_option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="#BFC6F1"
        android:padding="5dp"
        android:text="@string/question1_option4"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />
</LinearLayout>